# Url_Shortener

./: Cargo.toml
Backend/: Cargo.toml
Backend/src/: main.rs
Backend/src/config/: cors_config.rs
Backend/src/database/: db.rs
Backend/src/handlers/: base62.rs  id_generator.rs  mod.rs
Backend/src/models/: idGenerator.rs  longurls.rs  mod.rs
Backend/src/services/: mod.rs  recent.rs  redirect.rs  shorten.rs
Frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js  vite.config.ts
Frontend/src/: App.css  index.css  main.tsx
Frontend/src/components/: AnalyticsOverview.tsx  Header.tsx  RecentUrl.tsx  Shortened.tsx  TopPerformer.tsx  UrlInput.tsx  UrlShortener.tsx  urlInput.tsx
Frontend/src/hooks/: use-toast.ts
Frontend/src/pages/: Index.tsx
