[package]
name = "url_shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
redis = "0.24"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
